service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-service
spec:
  type: NodePort
  selector:
    app: demo-myapp
  ports:
    - port: 80
      targetPort: 3000
